--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@argdown/core": "^1.5.0",
-    "@argdown/node": "^1.5.2"
+    "@argdown/node": "^1.5.2",
+    "@babel/runtime": "^7.12.5",
+    "regenerator": "^0.14.7"
   },
   "scripts": {
     "start": "elm-app start",
