--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@argdown/node": "^1.5.2",
     "@argdown/web-components": "^1.5.0",
     "@babel/runtime": "^7.12.5",
+    "auto-bind": "^4.0.0",
     "regenerator": "^0.14.7"
   },
   "scripts": {
