--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "elm-app start",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.{js,jsx,ts,tsx,json}' --write",
     "elm-format": "elm-format --yes src/",
-    "elm-format-staged": "git diff --name-only --staged | grep .elm | xargs -r elm-format --yes",
+    "elm-format-staged": "FILES=$(git diff --name-only --staged | grep .elm); if [[ \"\" != \"$FILES\" ]]; then elm-format --yes $FILES; git add $FILES; fi",
     "format": "yarn prettier-format && yarn elm-format",
     "test": "elm-test",
     "analyze": "elm-analyse"
