--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "regenerator": "^0.14.7"
   },
   "scripts": {
-    "gh-deploy": "ELM_APP_BASE_PATH=arg-viewer elm-app build && gh-pages -d build",
+    "build": "elm-app build",
     "start": "elm-app start",
+    "make": "elm make",
+    "repl": "elm repl",
+    "reactor": "elm reactor",
+    "test": "elm-test",
+    "gh-deploy": "ELM_APP_BASE_PATH=arg-viewer elm-app build && gh-pages -d build",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.{js,jsx,ts,tsx,json}' --write",
     "elm-format": "elm-format --yes src/",
     "elm-format-staged": "FILES=$(git diff --name-only --staged | grep .elm); if [[ \"\" != \"$FILES\" ]]; then elm-format --yes $FILES; git add $FILES; fi",
     "format": "yarn prettier-format && yarn elm-format",
-    "test": "elm-test",
     "analyze": "elm-analyse",
-    "build": "elm-app build",
     "mdupdate": "bash ./src/MdPages/mdElmConverter.sh"
   },
   "husky": {
@@ -40,13 +43,57 @@
     "elm.json": "elm install"
   },
   "devDependencies": {
+    "@babel/cli": "7.12.8",
+    "@babel/core": "7.12.9",
+    "@babel/plugin-transform-runtime": "7.12.1",
+    "@babel/preset-env": "7.12.7",
+    "@babel/runtime": "^7.12.5",
     "@hkdobrev/run-if-changed": "^0.3.1",
+    "assets-webpack-plugin": "3.9.12",
+    "autoprefixer": "10.0.4",
+    "babel-loader": "8.2.2",
+    "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chalk": "2.4.2",
+    "connect-history-api-fallback": "1.6.0",
+    "copy-webpack-plugin": "5.1.2",
+    "cosmiconfig": "5.2.1",
+    "css-loader": "4.3.0",
+    "dotenv": "8.2.0",
+    "elm": "latest-0.19.1",
     "elm-analyse": "^0.16.5",
+    "elm-asset-webpack-loader": "1.1.2",
     "elm-format": "^0.8.4",
+    "elm-hot-webpack-loader": "1.1.7",
     "elm-test": "^0.19.1-revision4",
+    "elm-webpack-loader": "6.0.1",
+    "file-loader": "6.2.0",
     "gh-pages": "^3.1.0",
+    "html-webpack-plugin": "4.5.0",
+    "http-proxy-middleware": "0.21.0",
     "husky": "^4.3.0",
+    "mini-css-extract-plugin": "0.12.0",
+    "minimist": "1.2.5",
+    "object-assign": "4.1.1",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-loader": "4.1.0",
+    "postcss-safe-parser": "5.0.2",
     "prettier": "^2.2.0",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "promise": "8.1.0",
+    "react-dev-utils": "6.1.1",
+    "react-error-overlay": "4.0.1",
+    "sockjs-client": "1.4.0",
+    "string-replace-loader": "2.3.0",
+    "strip-ansi": "6.0.0",
+    "style-loader": "1.3.0",
+    "uglifyjs-webpack-plugin": "1.3.0",
+    "url-loader": "4.1.1",
+    "webpack": "4.44.2",
+    "webpack-dev-server": "3.11.0",
+    "webpack-manifest-plugin": "2.2.0",
+    "whatwg-fetch": "3.5.0",
+    "workbox-webpack-plugin": "4.3.1"
   }
 }
